syntax = "proto3";

package io.github.vinicreis.dht.core.model;

enum DataType {
  BOOLEAN = 0;
  BYTE = 1;
  STRING = 2;
  INTEGER = 3;
  LONG = 4;
  FLOAT = 5;
  DOUBLE = 6;
}
